# windows-edr-lite

./: CMakeLists.txt  README.md
build-milestone1-mingw/: Makefile  cmake_install.cmake
build-mingw/: CMakeCache.txt  Makefile
include/: detection_engine.h  logger.h  process_monitor.h  utils.h
src/: detection_engine.c  logger.c  main.c  network_monitor.c  process_monitor.c
